# mcp-gateway

./: .env.example  .gitignore  Cargo.toml  Dockerfile  FINAL_PROJECT_REPORT.md  LICENSE  README.md
config/: default.toml  dev.toml  hz-prod.toml  test.toml
database/: README.md  init.sql
docker/: Dockerfile  Dockerfile.pgvecto-rs-zhparser  README-zhparser.md  README.md  docker-compose.middleware.yml  docker-compose.yml  init-zhparser.sql
docker/elasticsearch/: docker-entrypoint.sh
docker/monitoring/: prometheus.yml
docs/: README.md  streamable.md
docs/docs/configuration/: DYNAMIC_DOMAIN_CONFIG.md
docs/docs/development/: DEVELOPMENT_PROGRESS_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md
docs/docs/reports/: FIX_METRICS_API_ERROR.md  FRONTEND_FIX_REPORT.md  FRONTEND_UPGRADE_REPORT.md
docs/docs/testing/: TEST_REPORT.md  TRANSPORT_PROTOCOLS.md  UNIQUENESS_VALIDATION_TEST_REPORT.md  test_transports.md
migrations/: 001_initial.sql  002_api_paths_unique.sql  003_endpoint_connection_tracking.sql  004_table_rag.sql  005_table_rag_index_mapping.sql  006_table_rag_spec_0055.sql
monitoring/: prometheus.yml
scripts/: README.md  create_test_endpoint.sh  test_connection_tracking.sh  test_pgvector_connection.sh
scripts/scripts/deployment/: clean.sh  start.sh  stop.sh
scripts/scripts/testing/: run_tests.sh  test_mcp_transports.sh
spec/: 001-init.md  002-web-v2.md  003-web-list-endpoint.md  004-endpoint-connection.md  005-inspector.md  006-mcp-protocol.md  007-rmcp.md  008-schema.md  009-enpoint.md  010-connection.md  011-interface_relation.md  012-aliyun-ai.md  013-search.md  014-pgvector-rs.md  015-table-rag.md  temp.md
spec/005-table-rag/: 0051.md  0052.md  0053.md  0054.md  0055.md
src/: error.rs  main.rs  state.rs
src/config/: mod.rs
src/handlers/: adapter_sse.rs  connection_handler.rs  endpoint_handler.rs  file_handler.rs  health_handler.rs  interface_relation_handler.rs  interface_retrieval_handler.rs  mcp_transport_handler.rs  metrics_handler.rs  mod.rs  sse_handler.rs  swagger_handler.rs  swagger_mcp.rs  system_handler.rs  table_rag_handler.rs
src/middleware/: connection_tracker.rs  connection_tracking.rs  interceptor.rs  logging.rs  metrics.rs  mod.rs
src/models/: database.rs  endpoint.rs  interface_relation.rs  interface_retrieval.rs  mod.rs  swagger.rs  table_rag.rs
src/routes/: connection_routes.rs  endpoint_routes.rs  file_routes.rs  health_routes.rs  metrics_routes.rs  mod.rs  swagger_routes.rs  system_routes.rs  table_rag_routes.rs
src/services/: elastic_search.rs  embedding_service.rs  endpoint_service.rs  file_service.rs  interface_relation_service.rs  interface_retrieval_service.rs  listener_enpoint_event.rs  mcp_service.rs  mod.rs  pgvectorrs_search.rs  search.rs  search_trait.rs  session_service.rs  startup_loader_service.rs  swagger_service.rs  table_rag_service.rs
src/tests/: connection_counter_test.rs  elastic_search_test.rs  integration_test.rs  interface_relation_api_test.rs  interface_relation_models_test.rs  interface_relation_test.rs  interface_retrieval_models_test.rs  interface_retrieval_test.rs  mod.rs  pgvector_rs_test.rs  surrealdb_test.rs
src/utils/: embedding.rs  mod.rs  shutdown.rs  swagger_util.rs  util.rs
test-mcp-client/: mcp-client-example.js  package-lock.json  package.json  test-final.js  test-results-summary.md  test-sse-enhanced.js  test-sse-fixed.js  test-sse.js  test-stdio.js  test-stdio.sh  test-stream-final.js  test-stream-fixed.js  test-stream.js  test-streamable.js
test-mcp-python-client/: main.py  mcp_sse_client.py  pyproject.toml  test_report.md
web/: .env.test  Dockerfile  index.html  package-lock.json  package.json
web/src/: routeTree.gen.ts
web/src/assets/: mcp-logo.tsx
web/src/components/data-table/: pagination.tsx
web/src/components/layout/: app-sidebar.tsx  app-title.tsx  header-actions.tsx  header.tsx
web/src/components/layout/data/: sidebar-data.ts
web/src/components/ui/: breadcrumb.tsx  resizable.tsx
web/src/features/apps/: index.tsx
web/src/features/dashboard/: index.tsx
web/src/features/endpoints/: index.tsx
web/src/features/endpoints/components/: create-endpoint-dialog.tsx  data-table-row-actions.tsx  endpoints-table.tsx
web/src/features/endpoints/data/: api.ts  endpoints.ts  schema.ts
web/src/features/files/: api.ts
web/src/features/search/: index.tsx
web/src/features/search/components/: search-form.tsx  search-results.tsx
web/src/features/search/data/: api.ts  schema.ts
web/src/features/table-rag/: index.tsx
web/src/features/table-rag/data/: api.ts  schema.ts
web/src/routes/: __root.tsx
web/src/routes/_authenticated/datasets/: create.tsx  index.tsx
web/src/routes/_authenticated/datasets/$datasetId/: edit.tsx  hit.tsx  view.tsx
web/src/routes/_authenticated/endpoints/: index.tsx
web/src/routes/_authenticated/search/: index.tsx
web/src/styles/: theme.css
