[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Monitoring
axum-prometheus = "0.9.0"
prometheus = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# URL parsing
url = "2.5"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.35", features = ["serde"] }

regex = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Swagger/OpenAPI
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum", "vendored"] }

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
bytes = "1.0"

# Signal handling for graceful shutdown
tokio-signal = "0.2"

# Additional features for MCP transports
tokio-process = "0.2"
byteorder = "1.5"

# Lazy static initialization
lazy_static = "1.4"

# RMCP for MCP protocol implementation
#rmcp = { version = "0.6.4", features = [
#    "server",
#    "macros",
#    "client",
#    "transport-sse-server",
#    "transport-io",
#    "transport-streamable-http-server",
#    "transport-streamable-http-server-session",
#    "auth",
#    "elicitation",
#    "schemars",
#] }

rmcp = { git = "https://github.com/Asura7969/rust-sdk.git", branch = "feature-v0.6.3", features = [
    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "auth",
    "elicitation",
    "schemars",
] }

async-trait = "0.1"

once_cell = "1.21.3"

http-body-util = "0.1.0"

dashmap = "6.1.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
httpmock = "0.7"
serde_json = "1.0"
tempfile = "3.0"
wiremock = "0.6"
http-body-util = "0.1"

# Test utilities
once_cell = "1.19"
test-log = "0.2"
env_logger = "0.11"

# Async testing
tokio = { version = "1.0", features = ["test-util", "macros"] }

# HTTP testing
axum-test = "15.0"
hyper = { version = "1.0", features = ["full"] }

# WebSocket testing
tokio-tungstenite = "0.24"
futures-util = "0.3"

