[package]
name = "mcp-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "ws", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "migrate", "rust_decimal", "postgres", "json"] }
# PostgreSQL with pgvector support
tokio-postgres = "0.7"
pgvector = { version = "0.4", features = ["postgres", "sqlx"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Monitoring
axum-prometheus = "0.9.0"
prometheus = "0.13"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.35", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Swagger/OpenAPI
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum", "vendored"] }

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# RMCP for MCP protocol implementation
#rmcp = { version = "0.6.4", features = [
#    "server",
#    "macros",
#    "client",
#    "transport-sse-server",
#    "transport-io",
#    "transport-streamable-http-server",
#    "transport-streamable-http-server-session",
#    "auth",
#    "elicitation",
#    "schemars",
#] }

rmcp = { git = "https://github.com/Asura7969/rust-sdk.git", branch = "feature-v0.6.3", features = [
    "server",
    "macros",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "auth",
    "elicitation",
    "schemars",
] }

async-trait = "0.1"

once_cell = "1.21.3"

dashmap = "6.1.0"
elasticsearch = "9.1.0-alpha.1"
csv = "1.3"
calamine = "0.20"
opendal = "0.43"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
serde_json = "1.0"

# Test utilities
once_cell = "1.19"

# Async testing
tokio = { version = "1.0", features = ["test-util", "macros"] }

# HTTP testing
axum-test = "15.0"
hyper = { version = "1.0", features = ["full"] }

